[project]
name = "imas-music-db"
dynamic = ["version"]
description = "アイマス楽曲データベース - Googleスプレッドシートからの自動JSON生成システム"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "ruff>=0.12.1",
    "yamllint>=1.37.1",
    "yamlfix>=1.17.0",
    "shellcheck-py>=0.10.0.1",
    "shfmt-py>=3.11.0.2",
    "google-auth-stubs>=0.3.0",
    "google-api-python-client-stubs>=1.29.0",
]
