[project]
name = "imas-music-db"
dynamic = ["version"]
description = "アイマス楽曲データベース - Googleスプレッドシートからの自動JSON生成システム"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "ruff>=0.12.1",
    "yamllint>=1.37.1",
    "yamlfix>=1.17.0",
    "shellcheck-py>=0.10.0.1",
    "shfmt-py>=3.11.0.2",
    "google-auth-stubs>=0.3.0",
    "google-api-python-client-stubs>=1.29.0",
    "pyright>=1.1.390",
]

# ===============================================================================
# Pyright設定 - 純粋なstrictモード
# 日本語コメント・コーディング対応版
# 
# strictモードのみを使用してPyrightのデフォルト厳格設定を完全適用
# 個別診断設定は一切行わず、Pyrightの推奨設定に完全委任
# ===============================================================================

[tool.pyright]
# Pythonバージョンの指定
# このプロジェクトはPython 3.13を使用
pythonVersion = "3.13"

# Pythonプラットフォームの指定（Darwin: macOS, Linux, Windows）
pythonPlatform = "All"

# 分析対象のルートディレクトリ
# プロジェクトルートを指定
include = [
    ".",
    "scripts",
    "config"
]

# 分析対象から除外するディレクトリ・ファイル
# Ruffと同様の除外設定を適用
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
    ".idea",
    "*.egg-info"
]

# スタブパッケージのディレクトリ
# Google API関連の型スタブを使用
stubPath = ""

# 仮想環境のパス
# uvの仮想環境を指定
venvPath = ".venv"

# 型チェックモード - 最も厳格な設定
# "strict": Pyrightが推奨する全ての厳格ルールを自動適用
# 
# strictモードで自動的にerrorレベルに設定される主要診断：
# - reportUnknownVariableType: 型推論できない変数
# - reportUnknownMemberType: 型推論できないメンバー
# - reportUnknownParameterType: 型推論できない引数
# - reportUnknownArgumentType: 型推論できない実引数
# - reportMissingParameterType: 引数の型注釈不足
# - reportMissingReturnType: 戻り値の型注釈不足
# - reportMissingTypeArgument: ジェネリック型の型引数不足
# - reportUnusedImport: 未使用インポート
# - reportUnusedVariable: 未使用変数
# - reportUnusedClass: 未使用クラス
# - reportUnusedFunction: 未使用関数
# - その他40以上の厳格な型安全性チェック
typeCheckingMode = "strict"

# 自動補完を有効にするか
autoImportCompletions = true

# 分析の詳細度を表示するか
verboseOutput = false

# 実行環境の設定
[[tool.pyright.executionEnvironments]]
root = "."
pythonVersion = "3.13"
pythonPlatform = "All"
